--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
               </ul>
             </div>
             <div class="resume-item">
+               <h4>Freelance</h4>
               <h5>2022-Sekarang</h5>
-              <p><em>PT INFRA KARYA PRATAMA</em></p>
               <ul>
                 <li>Web Human-Resource</li>
               </ul>
