--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
               <p><em>Lokasi: Jl. H. Gofur Kp. Cijerah No.162, RT.05/RW.04, Tanimulya, Kec. Ngamprah, Kabupaten Bandung Barat, Jawa Barat 40552</em></p>
               <p>Prestasi:
                 <ul>
-                  <li>Juara 1 Umum Paskibraka di Universitas Muhamadiyah</li>
-                  <li>Juara 1 Umum Paskibraka di SMA Global Solusi Indonesia</li>
-                  <li>Juara 2 Utama Paskibraka di MAN 2 Cianjur</li>
+                  <li>Juara 1 Umum Paskibra di Universitas Muhamadiyah Bandung</li>
+                  <li>Juara 1 Umum Paskibra di SMA Global Solusi Indonesia</li>
+                  <li>Juara 2 Utama Paskibra di MAN 2 Cianjur</li>
                   <li>Mengikuti LKS Mobile Robotic Provinsi Jawa Barat</li>
                 </ul>
               </p>
